scrollbar fix

--- a/styles/individual/_bottomwrapper.scss
+++ b/styles/individual/_bottomwrapper.scss
@@ -20,34 +20,21 @@
 
     .notes {
         background-color: $yellow-note_color; // placeholder
-        padding: 15px 10px;
+        padding: 15px;
         color: $font_color;
         position: relative;
         overflow: auto;
 
-        /* Custom scrollbar styles */
-        &::-webkit-scrollbar {
-            width: 8px; /* Adjust the width of the scrollbar */
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background: #888; /* Color of the scrollbar thumb */
-            border-radius: 10px; /* Rounded corners for the scrollbar thumb */
-        }
-
-        &::-webkit-scrollbar-thumb:hover {
-            background: #555; /* Color of the scrollbar thumb on hover */
-        }
-    
+        
         h2 {
             font-size: 1.3rem;
             color: #333;
         }
-    
+        
         .notes-input {
             @include flex-center(row, 1rem, center);
             margin-bottom: 10px;
-    
+            
             textarea {
                 width: auto;
                 padding: 5px;
@@ -56,11 +43,11 @@
                 font-size: 0.9rem;
                 overflow: hidden;
                 border: none;
-                border-bottom: 1px solid $amber_color;
+                border-radius: 3px;
                 outline: none;
-                background: transparent;
+                background: lighten($yellow-note_color, 10%);
             }
-    
+            
             button {
                 padding: 5px;
                 height: 30px;
@@ -72,23 +59,23 @@
                 cursor: pointer;
                 font-size: 1rem;
                 transition: background-color 0.3s;
-    
+                
                 i {
                     font-size: 0.9rem;
                 }
-    
+                
                 &:hover {
                     background-color: darken($amber_color, 10%);
                 }
             }
         }
-    
+        
         ul {
             list-style-type: none;
             padding: 0;
             display: flex;
             flex-direction: column-reverse;
-    
+            
             li {
                 display: flex;
                 justify-content: space-between;
@@ -101,7 +88,7 @@
                 white-space: normal; /* Allow text to wrap */
                 word-break: break-word; /* Break long words */
                 hyphens: auto; /* Enable hyphenation */
-    
+                
                 button {
                     background: none;
                     border: none;
@@ -109,19 +96,32 @@
                     cursor: pointer;
                     font-size: 1rem;
                     transition: color 0.2s;
-    
+                    
                     i {
                         font-size: 1rem;
                     }
-    
+                    
                     &:hover {
                         color: darken($amber_color, 10%);
                     }
                 }
             }
         }
+        
+        &::-webkit-scrollbar {
+            width: 8px; /* Adjust the width of the scrollbar */
+        }
+    
+        &::-webkit-scrollbar-thumb {
+            background: lighten($yellow-note_color, 15%);
+            border-radius: 10px; /* Rounded corners for the scrollbar thumb */
+        }
+    
+        &::-webkit-scrollbar-thumb:hover {
+            background: lighten($yellow-note_color, 10%);
+        }
     }
-
+    
     .music-player {
         background-color: lightgray; //placeholder
     }
